dynamic layout bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@
 html, body, #container {
   margin: 0;
   padding: 0;
+  width: 100%;
+  overflow: hidden;
 }
 
 body {
